--- a/casorodrigo-cvonline.html
+++ b/casorodrigo-cvonline.html
@@ -9,6 +9,9 @@
         <div class=seccionizq>
             <h1 class="nombre">RODRIGO CASO MOLINA</h1>
             <img id="foto" src="fotocv.png" alt="fotocv">
+            <h3>LinkedIn:</h3>
+            <a class="linkedin" href="https://www.linkedin.com/in/casomrodrigo/">linkedin.com/in/casomrodrigo/</a>
+
             <h2>Información Personal</h2>
             <ul class="listadedatos">
                 <li><span class="datos">Lugar y fecha de nacimiento</span>: Tarija - Bolivia 28/04/1992</li>
@@ -33,15 +36,16 @@
         <div class="seccionder">
           <div class=seccion id="Quién_Soy">
             <h2>Quién Soy</h2>
-            <h3>Desarrollo Web Full Stack</h3>
-            <p>Dedicado, responsable y predispuesto a afrontar desafíos en cualquier ámbito. Capacidad analítica, facilidad y disposición para con el aprendizaje. Eficacia y eficiencia a la hora de responder ante situaciones de trabajo bajo presión.</p>
-            <p>Conocimiento en sistemas y manejo de internet con constante interés por la actualización profesional.</p>
+            <h3>Desarrollador Web Full Stack</h3>
+            <p>Estoy en una etapa de aprendizaje como Desarrollador para poder dedicarme Full Time en este rubro y así poder hacer lo que me apasiona. <br> Soy dedicado, responsable y predispuesto a afrontar desafíos en cualquier ámbito. Considero que tengo buena capacidad analítica, facilidad y disposición para con el aprendizaje. Trato de demostrar eficacia y eficiencia a la hora de responder ante situaciones de trabajo bajo presión.</p>
+            <p>Poseo conocimiento en sistemas y manejo de distintas tecnologías, con constante interés por la actualización personal y profesional.</p>
           </div>
           <div class="seccion" id="formacion">
             <h2>Formación</h2>
             <ol>
-              <li class="elementoconfecha"><span class="fecha">2010 - Actualidad</span><span class="descripcion">Universidad Nacional de Córdoba - Facultad de Ciencias Exactas, Físicas y Naturales. <strong>Ingeniería Industrial.</strong></span></li>
-              <li class="elementoconfecha"><span class="fecha">2006 - 2009</span><span class="descripcion">Colegio La Salle – Tarija - Bolivia. Bachillerato en humanidades con orientación en Física y Matemática.</span></li>
+              <li class="elementoconfecha"><span class="fecha">2019</span><span class="descripcion"><strong>DESARROLLO WEB FULL STACK.</strong> Acámica. </span></li>
+              <li class="elementoconfecha"><span class="fecha">2010 - Actualidad</span><span class="descripcion"><strong>INGENIERÍA INDUSTRIAL.</strong> Universidad Nacional de Córdoba - Facultad de Ciencias Exactas, Físicas y Naturales.</span></li>
+              <li class="elementoconfecha"><span class="fecha">2006 - 2009</span><span class="descripcion"><strong>Bachillerato en humanidades con orientación en Física y Matemática.</strong> Colegio La Salle – Tarija - Bolivia. </span></li>
             </ol>
           </div>
           <div class="seccion" id="explaboral">
@@ -49,9 +53,9 @@
             <ol>
               <li class="elementoconfecha"><span class="fecha">Nov/2017 – Actualidad</span><span class="descripcion"><strong>Asistente Técnico.</strong>
                 Empresa: Iscot Services S.A.
-                Tareas principales: Gestión documental del sistema de gestión de calidad dentro del pilar Operativo del
+                Tareas principales: Referente del sistema de gestión de calidad dentro del pilar Operativo del
                 sistema de SCM (Servicios de Clase Mundial). Gestión de indicadores. Estudio de métodos y tiempos en
-                las distintas tareas operativas.</span></li>
+                las distintas tareas operativas. Programación de tareas.</span></li>
               <li class="elementoconfecha"><span class="fecha">Jul/2006 - Oct/2017</span><span class="descripcion"><strong>Ingeniero de procesos.</strong>
                     Empresa: Canale SRL.
                     Tareas principales: Optimización de procesos. Estudio de tiempos. Registro de producción. Cálculo de
@@ -62,7 +66,7 @@
             <h2>Portfolio</h2>
             <ul>
               <li><figure class="figportfolio"><img class="imgportfolio" src="imgs/cv-icon.png" alt="Icono CV"><figcaption>CV</figcaption></figure></li>
-              <li><figure class="figportfolio"><img class="imgportfolio" src="imgs/homebanking.png" alt="Icono homebanking"><figcaption>homebanking</figcaption></figure></li>
+              <li><figure class="figportfolio"><img class="imgportfolio" src="imgs/homebanking.png" alt="Icono homebanking" style="padding:30px;"><figcaption>homebanking</figcaption></figure></li>
               <li><figure class="figportfolio"><img class="imgportfolio" src="imgs/rompecabezas-icon.png" alt="Icono rompecabezas"><figcaption>rompecabezas</figcaption></figure></li>
               <li><figure class="figportfolio"><img class="imgportfolio" src="imgs/pixel-art-icon.png" alt="Icono pixel-art"><figcaption>pixel-art</figcaption></figure></li>
               <li><figure class="figportfolio"><img class="imgportfolio" src="imgs/ciudad-zombie-icon.png" alt="Icono ciudad-zombie"><figcaption>ciudad-zombie</figcaption></figure></li>
